--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
-export TALOSCONFIG=./clusters/env/prd/talosconfig.yaml
-export KUBECONFIG=./clusters/env/prd/kubeconfig.yaml
+export TALOSCONFIG=$HOME/.kube/talos-clusters/merged/talosconfig
+export KUBECONFIG=$HOME/.kube/talos-clusters/merged/kubeconfig
 export CONTROLPLANE=$(cd ./clusters && terraform output -raw control_nodes)
 export WORKERS=$(cd ./clusters && terraform output -raw worker_nodes)
 export ALL="$CONTROLPLANE,$WORKERS"
@@ -7,4 +7,4 @@ export C0=$(echo $CONTROLPLANE | cut -d, -f 1)
 export W0=$(echo $WORKERS | cut -d, -f 1)
 export ARM_ACCESS_KEY=$(az storage account keys list --resource-group rg-dct-prd-westeu --account-name dcttfbackendprod001 | jq '.[1].value' -r)
 export VAULT_ADDR="https://vault.decort.tech"
-export VAULT_SKIP_VERIFY=true
+export VAULT_SKIP_VERIFY=true.yaml
