succesfully bootstrap cluster

--- a/.envrc
+++ b/.envrc
@@ -1,10 +1,22 @@
+# Set Talos and Kube config paths
 export TALOSCONFIG=$HOME/.kube/talos-clusters/merged/talosconfig
 export KUBECONFIG=$HOME/.kube/talos-clusters/merged/kubeconfig
+
+# Set age key file
+export SOPS_AGE_KEY_FILE=$HOME/.config/sops/age/keys.txt
+
+# Get current context and extract environment
+CURRENT_CONTEXT=$(kubectl config current-context)
+CURRENT_ENV=$(echo $CURRENT_CONTEXT | sed -E 's/admin@([^-]+).*/\1/')
+
+# Set node variables based on current environment
 export CONTROLPLANE=$(cd ./clusters && terraform output -raw control_nodes)
 export WORKERS=$(cd ./clusters && terraform output -raw worker_nodes)
 export ALL="$CONTROLPLANE,$WORKERS"
 export C0=$(echo $CONTROLPLANE | cut -d, -f 1)
 export W0=$(echo $WORKERS | cut -d, -f 1)
+
+# Set Azure storage account key and Vault address
 export ARM_ACCESS_KEY=$(az storage account keys list --resource-group rg-dct-prd-westeu --account-name dcttfbackendprod001 | jq '.[1].value' -r)
 export VAULT_ADDR="https://vault.decort.tech"
 export VAULT_SKIP_VERIFY=true.yaml
