--- a/infra/applicationsets/core.yaml
+++ b/infra/applicationsets/core.yaml
@@ -5,24 +5,12 @@ metadata:
   namespace: argocd
 spec:
   generators:
-    - list:
-        elements:
-          - name: argocd
-            namespace: argocd
-            value: apps/argocd
-            syncWave: 0
-          - name: sealed-secrets
-            namespace: kube-system
-            value: apps/sealed-secrets
-            syncWave: 0
-          - name: cert-manager
-            namespace: cert-manager
-            value: apps/cert-manager
-            syncWave: 1
-          - name: longhorn
-            namespace: longhorn-system
-            value: apps/longhorn
     - git:
         repoURL: git@github.com/dc-tec/k8s-gitops.git
         revision: main
-        path: apps
+        directories:
+          - path: apps/core/*
+  template:
+    metadata:
+      name: '{{path.basename}}'
+      namespace: '{{path.basename}}'
