--- a/infrastructure/secret-management/openbao/config/values.yaml
+++ b/infrastructure/secret-management/openbao/config/values.yaml
@@ -51,9 +51,9 @@ server:
     #  name: vault-unseal
 
   extraEnvironmentVars:
-    VAULT_CACERT: /vault/userconfig/vault-ca-tls/ca.crt
-    VAULT_TLS_CERT: /vault/userconfig/vault-internal-tls/tls.crt
-    VAULT_TLS_KEY: /vault/userconfig/vault-internal-tls/tls.key
+    VAULT_CACERT: /openbao/userconfig/openbao-ca-tls/ca.crt
+    VAULT_TLS_CERT: /openbao/userconfig/openbao-internal-tls/tls.crt
+    VAULT_TLS_KEY: /openbao/userconfig/openbao-internal-tls/tls.key
 
  # extraSecretEnvironmentVars:
  #   - envName: AZURE_CLIENT_ID
@@ -99,9 +99,9 @@ server:
           address          = "[::]:8200"
           cluster_address  = "[::]:8201"
 
-          tls_client_ca_file = "/vault/userconfig/vault-ca-tls/ca.crt"
-          tls_cert_file      = "/vault/userconfig/vault-internal-tls/tls.crt"
-          tls_key_file       = "/vault/userconfig/vault-internal-tls/tls.key"
+          tls_client_ca_file = "/openbao/userconfig/openbao-ca-tls/ca.crt"
+          tls_cert_file      = "/openbao/userconfig/openbao-internal-tls/tls.crt"
+          tls_key_file       = "/openbao/userconfig/openbao-internal-tls/tls.key"
         }
 
         service_registration "kubernetes" {
@@ -111,13 +111,13 @@ server:
         #seal "azurekeyvault" {}
 
         storage "raft" {
-          path = "/vault/data"
+          path = "/openbao/data"
         
           retry_join {
             leader_api_addr         = "https://openbao-active:8200"
-            leader_ca_cert_file     = "/vault/userconfig/vault-ca-tls/ca.crt"
-            leader_client_cert_file = "/vault/userconfig/vault-internal-tls/tls.crt"
-            leader_client_key_file  = "/vault/userconfig/vault-internal-tls/tls.key"
+            leader_ca_cert_file     = "/openbao/userconfig/openbao-ca-tls/ca.crt"
+            leader_client_cert_file = "/openbao/userconfig/openbao-internal-tls/tls.crt"
+            leader_client_key_file  = "/openbao/userconfig/openbao-internal-tls/tls.key"
           }
     
           autopilot {
