--- a/infrastructure/secret-management/openbao/config/values.yaml
+++ b/infrastructure/secret-management/openbao/config/values.yaml
@@ -114,7 +114,24 @@ server:
           path = "/openbao/data"
         
           retry_join {
-            leader_api_addr         = "https://openbao-active:8200"
+            leader_api_addr         = "https://openbao-0.openbao-internal:8200"
+            leader_tls_servername   = "vault"
+            leader_ca_cert_file     = "/openbao/userconfig/openbao-ca-tls/ca.crt"
+            leader_client_cert_file = "/openbao/userconfig/openbao-internal-tls/tls.crt"
+            leader_client_key_file  = "/openbao/userconfig/openbao-internal-tls/tls.key"
+          }
+    
+          retry_join {
+            leader_api_addr         = "https://openbao-1.openbao-internal:8200"
+            leader_tls_servername   = "vault"
+            leader_ca_cert_file     = "/openbao/userconfig/openbao-ca-tls/ca.crt"
+            leader_client_cert_file = "/openbao/userconfig/openbao-internal-tls/tls.crt"
+            leader_client_key_file  = "/openbao/userconfig/openbao-internal-tls/tls.key"
+          }
+    
+          retry_join {
+            leader_api_addr         = "https://openbao-2.openbao-internal:8200"
+            leader_tls_servername   = "vault"
             leader_ca_cert_file     = "/openbao/userconfig/openbao-ca-tls/ca.crt"
             leader_client_cert_file = "/openbao/userconfig/openbao-internal-tls/tls.crt"
             leader_client_key_file  = "/openbao/userconfig/openbao-internal-tls/tls.key"
