--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
-export TALOSCONFIG=./clusters/prd/talosconfig.yaml
-export KUBECONFIG=./clusters/prd/kubeconfig.yaml
+export TALOSCONFIG=~/.kube/talos-clusters/prd/talosconfig.yaml
+export KUBECONFIG=~/.kube/talos-clusters/prd/kubeconfig
 export CONTROLPLANE=$(cd ./clusters/prd && terraform output -raw control_nodes)
 export WORKERS=$(cd ./clusters/prd && terraform output -raw worker_nodes)
 export ALL="$CONTROLPLANE,$WORKERS"
