change gateway config

--- a/applications/keycloak/base/keycloak.yaml
+++ b/applications/keycloak/base/keycloak.yaml
@@ -17,7 +17,11 @@ spec:
       key: password
   http:
     tlsSecret: keycloak-tls
+    httpEnabled: true
   hostname:
     hostname: keycloak.decort.tech
+    strict: false
+    strictBackchannel: false
   proxy:
     headers: xforwarded
+    termination: reencrypt
