--- a/applications/keycloak/base/gateway.yaml
+++ b/applications/keycloak/base/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   name: keycloak-gateway
   namespace: keycloak
   annotations:
-    cert-manager.io/cluster-issuer: cert-manager-staging
+    cert-manager.io/cluster-issuer: cert-manager-prd
 spec:
   gatewayClassName: cilium
   listeners:
