--- a/.envrc
+++ b/.envrc
@@ -1,10 +1,15 @@
-export TALOSCONFIG=~/.kube/talos-clusters/prd/talosconfig.yaml
-export KUBECONFIG=~/.kube/talos-clusters/prd/kubeconfig
-export CONTROLPLANE=$(cd ./clusters/prd && terraform output -raw control_nodes)
-export WORKERS=$(cd ./clusters/prd && terraform output -raw worker_nodes)
+# Set Talos and Kube config paths
+export TALOSCONFIG=$HOME/.kube/talos-clusters/merged/talosconfig
+export KUBECONFIG=$HOME/.kube/talos-clusters/merged/kubeconfig
+
+# Set node variables based on current environment
+export CLUSTER_ENV=$(cd ./cluster-infra && terraform output -raw cluster_env)
+export CONTROLPLANE=$(cd ./cluster-infra && terraform output -raw control_nodes)
+export WORKERS=$(cd ./cluster-infra && terraform output -raw worker_nodes)
 export ALL="$CONTROLPLANE,$WORKERS"
 export C0=$(echo $CONTROLPLANE | cut -d, -f 1)
 export W0=$(echo $WORKERS | cut -d, -f 1)
+
+# Set Azure storage account key and Vault address
 export ARM_ACCESS_KEY=$(az storage account keys list --resource-group rg-dct-prd-westeu --account-name dcttfbackendprod001 | jq '.[1].value' -r)
 export VAULT_ADDR="https://vault.decort.tech"
-export VAULT_SKIP_VERIFY=true
