--- a/kubernetes/argocd/applications/argocd.yaml
+++ b/kubernetes/argocd/applications/argocd.yaml
@@ -8,9 +8,11 @@ metadata:
 spec:
   project: core
   sources:
+    # Main ArgoCD Application
     - repoURL: git@github.com/dc-tec/k8s-gitops.git
       targetRevision: main
       path: kubernetes/apps/core/argocd
+    # ArgoCD Internal Config
     - repoURL: git@github.com/dc-tec/k8s-gitops.git
       targetRevision: main
       path: kubernetes/argocd
