--- a/kubernetes/apps/infrastructure/prometheus/base/rbac.yaml
+++ b/kubernetes/apps/infrastructure/prometheus/base/rbac.yaml
@@ -21,6 +21,8 @@ rules:
     resources:
       - configmaps
     verbs: ["get"]
+  - nonResourceURLs: ["/metrics"]
+    verbs: ["get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
