--- a/kubernetes/apps/infrastructure/alertmanager/base/alertmanager.yaml
+++ b/kubernetes/apps/infrastructure/alertmanager/base/alertmanager.yaml
@@ -9,6 +9,9 @@ spec:
   replicas: 1
   version: v0.26.0
   serviceAccountName: alertmanager
+  podMetadata:
+    labels:
+      app: alertmanager
   securityContext:
     fsGroup: 2000
     runAsNonRoot: true
