--- a/kubernetes/apps/infrastructure/alertmanager/base/service.yaml
+++ b/kubernetes/apps/infrastructure/alertmanager/base/service.yaml
@@ -9,7 +9,7 @@ spec:
   ports:
     - name: web
       port: 9093
-      targetPort: web
+      targetPort: 9093
       protocol: TCP
   selector:
     app: alertmanager
