--- a/kubernetes/apps/infrastructure/alertmanager/base/gateway.yaml
+++ b/kubernetes/apps/infrastructure/alertmanager/base/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   name: alertmanager-gateway
   namespace: monitoring
   annotations:
-    cert-manager.io/cluster-issuer: cert-manager-prd
+    cert-manager.io/cluster-issuer: cert-manager-staging
 spec:
   gatewayClassName: cilium
   listeners:
