--- a/kubernetes/apps/infrastructure/alertmanager/base/gateway.yaml
+++ b/kubernetes/apps/infrastructure/alertmanager/base/gateway.yaml
@@ -26,7 +26,9 @@ spec:
       tls:
         mode: Terminate
         certificateRefs:
-          - name: alertmanager-tls
+          - group: ''
+            kind: Secret
+            name: alertmanager-tls
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
@@ -35,7 +37,9 @@ metadata:
   namespace: monitoring
 spec:
   parentRefs:
-    - name: alertmanager-gateway
+    - group: gateway.networking.k8s.io
+      kind: Gateway
+      name: alertmanager-gateway
       namespace: monitoring
       sectionName: http
   hostnames:
@@ -61,9 +65,10 @@ spec:
     - "alertmanager.decort.tech"
   rules:
     - backendRefs:
-        - name: alertmanager
-          port: 9093
+        - group: ''
           kind: Service
+          name: alertmanager
+          port: 9093
           weight: 1
       matches:
         - path:
