--- a/kubernetes/apps/infrastructure/alertmanager/base/gateway.yaml
+++ b/kubernetes/apps/infrastructure/alertmanager/base/gateway.yaml
@@ -50,6 +50,10 @@ spec:
           requestRedirect:
             scheme: https
             statusCode: 301
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
