update service account config

--- a/kubernetes/apps/workloads/openbao/base/serviceaccount.yaml
+++ b/kubernetes/apps/workloads/openbao/base/serviceaccount.yaml
@@ -1,8 +1,25 @@
+---
+# Create the ServiceAccount
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: openbao-auth
+  namespace: openbao-infra
+  labels:
+    app.kubernetes.io/name: openbao
+    app.kubernetes.io/component: auth
+    app.kubernetes.io/part-of: openbao-infra
+
+---
+# Create the ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: role-tokenreview-binding
-  namespace: default
+  name: openbao-tokenreview-binding
+  labels:
+    app.kubernetes.io/name: openbao
+    app.kubernetes.io/component: auth
+    app.kubernetes.io/part-of: openbao-infra
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -10,4 +27,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: openbao-auth
-    namespace: default
+    namespace: openbao-infra
