--- a/kubernetes/apps/workloads/openbao/base/snapshot.yaml
+++ b/kubernetes/apps/workloads/openbao/base/snapshot.yaml
@@ -43,7 +43,7 @@ spec:
     spec:
       template:
         spec:
-          serviceAccountName: openbao-backup-sa
+          serviceAccountName: openbao-auth
           containers:
           - name: openbao-backup
             image: registry.gitlab.com/dc-tec/openbao-backup:latest
