--- a/kubernetes/argocd/applications/openbao.yaml
+++ b/kubernetes/argocd/applications/openbao.yaml
@@ -9,7 +9,7 @@ spec:
   project: workloads
   source:
     repoURL: git@github.com/dc-tec/k8s-gitops.git
-    targetRevision: fix/openbao-cron
+    targetRevision: main
     path: kubernetes/apps/workloads/openbao
   destination:
     namespace: openbao-infra
