--- a/kubernetes/apps/infrastructure/rancher/config/values.yaml
+++ b/kubernetes/apps/infrastructure/rancher/config/values.yaml
@@ -4,11 +4,8 @@ tls: "external"
 # Rancher Server hostname
 hostname: "rancher.decort.tech"
 
-# Replica count for high availability
+# Single replica for test environment
 replicas: 1
-
-# Anti-affinity for HA deployment
-antiAffinity: "preferred"
 
 # Resources configuration
 resources:
@@ -19,5 +16,44 @@ resources:
     cpu: "250m"
     memory: "512Mi"
 
+# Global security configurations
+global:
+  cattle:
+    psp:
+      enabled: false
+
+# Pod security configurations
+podSecurityContext:
+  runAsNonRoot: true
+  runAsUser: 1000
+  runAsGroup: 1000
+  fsGroup: 1000
+
+# Container security configurations
+containerSecurityContext:
+  allowPrivilegeEscalation: false
+  capabilities:
+    drop:
+      - ALL
+  runAsNonRoot: true
+  runAsUser: 1000
+  seccompProfile:
+    type: RuntimeDefault
+
+# Bootstrap password
+bootstrapPassword: "admin"
+
+# Disable ingress as we're using external ingress
 ingress:
+  enabled: false
+
+# Disable features not needed in test environment
+features: ""
+
+# Disable audit logging for test environment
+auditLog:
+  enabled: false
+
+# Disable monitoring for test environment
+monitoring:
   enabled: false
