fix: Set correct service backend

--- a/kubernetes/apps/infrastructure/rancher/base/gateway.yaml
+++ b/kubernetes/apps/infrastructure/rancher/base/gateway.yaml
@@ -61,8 +61,8 @@ spec:
     - "rancher.decort.tech"
   rules:
     - backendRefs:
-        - name: rancher-service
-          port: 8080
+        - name: rancher-stable
+          port: 80
       matches:
         - path:
             type: PathPrefix
