--- a/kubernetes/apps/infrastructure/rancher/base/gateway.yaml
+++ b/kubernetes/apps/infrastructure/rancher/base/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   name: rancher-gateway
   namespace: cattle-system
   annotations:
-    cert-manager.io/cluster-issuer: cert-manager-staging
+    cert-manager.io/cluster-issuer: cert-manager-prd
 spec:
   gatewayClassName: cilium
   listeners:
